k8s/deployment-amqpworker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amqpworker
  labels:
    app: amqpworker
  annotations:
    description: "Deployment do Worker do RabbitMq"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amqpworker
  template:
    metadata:
      labels:
        app: amqpworker
    spec:
      containers:
      - name: amqpworker
        image: brunodasilvadev/techchallenge-worker
