k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
  annotations:
    description: "Deployment API Contatos"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: brunodasilvadev/techchallenge-api
        ports:
        - containerPort: 8080
