k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    name: portahttp
  selector:
    app: api
