k8s/service-rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
  annotations:
    description: "Service para rabbitmq"    
spec:
  ports:
  - port: 5672
    targetPort: 5672
    name: interno
  - port: 15672
    targetPort: 15672
    name: portal
  selector:
    app: rabbitmq
