k8s/service-sqlserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  labels:
    app: sqlserver
  annotations:
    description: "Service para sqlserver" 
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
  selector:
    app: sqlserver
