k8s/ingress-balanceamento.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-service-ingress
  labels:
    app: multi-service
    environment: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: techchallenge.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8080
      - path: /worker
        pathType: Prefix
        backend:
          service:
            name: worker
            port:
              number: 15672
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
